fullbleed bugfix

--- a/src/sass/components/_global-footer.scss
+++ b/src/sass/components/_global-footer.scss
@@ -31,6 +31,10 @@
   }
 }
 
+.a-global-footer_credentials{
+  transform: translate3d(0, 0, 0);
+}
+
 // MOLECULES
 
 .m-bio-text{
